--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,7 +1,8 @@
-path: D:/http-rest-api
+path: D:\http-rest-api
 commands:
-  - go build -o ./build/bin/app1.go cmd/apiserver/main.go
-  - go build -o ./build/bin/app2.go cmd/apiserver/main.go
+  - go build -o ./build/bin/app1 cmd/apiserver/main.go
+  - go build -o ./build/bin/app1 cmd/apiserver/main.go
+
 
 db:
   username: "postgres"
