--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,8 +1,11 @@
-path: D:\http-rest-api
-commands:
-  - go build -o ./build/bin/app1 cmd/apiserver/main.go
-  - go build -o ./build/bin/app1 cmd/apiserver/main.go
-
+obs:
+  - path: D:\http-rest-api
+    commands:
+      - go build -o ./build/bin/app1.go cmd/apiserver/main.go
+      - go build -o ./build/bin/app1.go cmd/apiserver/main.go
+  - path: D:\app_todo
+    commands:
+      - go build -o ./build/bin/app1.go
 
 db:
   username: "postgres"
