--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,8 +1,15 @@
 obs:
   - path: D:\http-rest-api
+    log_file: \tmp\log2.log
+    include_regexp:
+      - .*.go
+      - .*.env
+    exclude_regexp:
+      - .*._test.go
     commands:
       - go build -o ./build/bin/app1.go cmd/apiserver/main.go
-      - go build -o ./build/bin/app1.go cmd/apiserver/main.go
+      - go buid -o ./build/bin/app1.go cmd/apiserver/main.go
+
   - path: D:\app_todo
     commands:
       - go build -o ./build/bin/app1.go
